envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: service_envoy_1
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: ejabberd-grpc-server
                  domains: ["*"]
                  routes: 
                    - match: { prefix: "/" }
                      route: 
                        cluster: ejabberd-grpc-server
                        timeout: 0s
                        max_stream_duration:
                          grpc_timeout_header_max: 0s
                  cors:
                    allow_origin_string_match:
                      - prefix: "*"
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,Authorization
                    max_age: "172800"
                    expose_headers: custom-header-1, grpc-status, grpc-message
              http_filters:
                - name: envoy.filters.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 5223
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: service_envoy_1
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: ejabberd-client-port
                  domains: ["*"]
                  routes:
                    - match: { prefix: "/" }
                      route: 
                        cluster: ejabberd-client-port
                        timeout: 0s
                        max_stream_duration:
                          grpc_timeout_header_max: 0s
                  cors:
                    allow_origin_string_match:
                      - prefix: "*"
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,Authorization
                    max_age: "172800"
                    expose_headers: custom-header-1, grpc-status, grpc-message
              http_filters:
              - name: envoy.filters.http.cors
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: ejabberd-grpc-server
      connect_timeout: 100s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: ejabberd-grpc-server
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: 
                    address: ejabberd-grpc-server 
                    port_value: 5051
    - name: ejabberd-client-port
      connect_timeout: 100s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: ejabberd-client-port
        endpoints: 
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: ejabberd-grpc-server
                  port_value: 5222

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
